# dictation_dad

./: .gitignore  README.md  main.py  pyproject.toml
dictation_dad/: api.py  app.py  file_manager.py  settings.py  strategies.py  tts.py
static/: index.html
static/css/: style.css
static/js/: app.js
tests/: test_api.py  test_file_manager.py  test_settings.py  test_strategies.py  test_tts.py
vocabulary/古文/: 狼.ch_classical.csv
vocabulary/英语/: U1.en_word.csv  U2.en_word.csv  U3.en_word.csv  U4.en_word.csv  U5.en_word.csv  U6.en_word.csv  test.en_word.csv  三年级上册.en_word.csv
vocabulary/语文/: 2024人教版语文六年级下册-第三单元-读读写写.ch_word.csv  2024人教版语文六年级下册-第五单元-读读写写.ch_word.csv  2024人教版语文六年级下册-第四单元-读读写写.ch_word.csv  test.ch_word.csv
